[gd_scene load_steps=4 format=3 uid="uid://gk2igu0idkeg"]

[ext_resource type="Script" uid="uid://bv1qe6gjkfjbx" path="res://Scripts/UI/AbilityActionBar.gd" id="1_bb46h"]
[ext_resource type="PackedScene" uid="uid://c011dofai72u5" path="res://Scenes/UI/AbilityIcons/ability_icon.tscn" id="2_ii2nx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_agx74"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="AbilityActionBar" type="Control"]
custom_minimum_size = Vector2(224, 62)
layout_mode = 3
anchors_preset = 0
offset_right = 224.0
offset_bottom = 62.0
script = ExtResource("1_bb46h")
ability_icon_ui_scene = ExtResource("2_ii2nx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_agx74")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="InnateActivePanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="InnateActiveBar" type="MarginContainer" parent="PanelContainer/HBoxContainer/InnateActivePanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="InnateActiveActionBar" type="HBoxContainer" parent="PanelContainer/HBoxContainer/InnateActivePanel/InnateActiveBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="InnateUtilityPanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="InnateUtilityBar" type="MarginContainer" parent="PanelContainer/HBoxContainer/InnateUtilityPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="InnateUtilityActionBar" type="HBoxContainer" parent="PanelContainer/HBoxContainer/InnateUtilityPanel/InnateUtilityBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="WeaponAbilityPanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="WeaponAbilityBar" type="MarginContainer" parent="PanelContainer/HBoxContainer/WeaponAbilityPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="WeaponAbilityActionBar" type="HBoxContainer" parent="PanelContainer/HBoxContainer/WeaponAbilityPanel/WeaponAbilityBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="OffhandWeaponAbilityPanel" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2

[node name="OffhandWeaponAbilityBar" type="MarginContainer" parent="PanelContainer/HBoxContainer/OffhandWeaponAbilityPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="OffhandWeaponAbilityActionBar" type="HBoxContainer" parent="PanelContainer/HBoxContainer/OffhandWeaponAbilityPanel/OffhandWeaponAbilityBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
